Got rid of toast and rebuild most of the site with custom CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<meta property="og:url" content="http://www.preggersgui.de/" />
 	<meta property="og:description" content="" />
 	
-	<link rel="stylesheet" href="css/toast.css">
 	<link rel="stylesheet" href="css/style.css">
 	
 	<link rel="shortcut icon" href="favicon.ico" >
@@ -25,7 +24,7 @@
 	<title>Preggersguide</title>
 </head>
 <body>
-	<div id="top" class="header">
+	<div class="header">
 		<!-- <div class="social">
 			<iframe class="fb" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Ftypogui.de&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
 			
@@ -34,6 +33,9 @@
 		</div> -->
 		<!-- Hero -->
 		<div class="hero">
+			<div class="cover">
+				&nbsp;
+			</div>
 			<div class="copy">
 				<h1>Pre-Order now!</h1>
 				<h2>This is where some brief info about the guide itself will go. Nothing drastic. The specs and teaser.</h2>
@@ -42,48 +44,36 @@
 		</div>
 		<!-- Hero -->
 	</div>
-	<div class="wrap">
-	  	<div class="grids">	
-	  			<div class="grid-12">
-	  				<h2>We got you covered</h2>
-	  				<h3>Chapters from the moment you discover you’re preggers to the moment you heave that human out of your vag</h3>
-	  			</div>  			
-				<div id="chapters-row-1" style="border: 1px solid green;">
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;					</div>
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;
-					</div>
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;					</div>
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;
-					</div>
-				</div>
-				<div id="chapters-row-2">
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;					</div>
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;
-					</div>
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;					</div>
-					<div class="grid-3" style="border: 1px solid red;">
-						&nbsp;
-					</div>
-				</div>
+  	<div id="chapters">	
+  			<div class="head-subhead-centered">
+  				<h2>We got you covered</h2>
+  				<h3>Chapters from the moment you discover you’re preggers to the moment you heave that human out of your vag</h3>
+  			</div>  			
+			<table id="">
+				<tr>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+				</tr>
+			</table>
+	</div>
+	<div id="sample" class="sample-container">
+		<div class="sample-headline">
+			<h4>Chapter 1 Preview</h4>
+			<h1 style="font-size: 3em; color: #fff; text-align: left;">Holy Shit I’m Pregnant!</h1>
+		</div>
+		<div class="sample-copy">
+			<div class="sample-copy-container">
+				<p style="color: #95CEDF;">Congratulations girl! Whatever your journey to pregnancy may have been, we’re glad you’re here now. After reading more baby and mama books than we can count, we were craving for something simple and straightforward, and with a healthy dose of humor – enter Preggers Guide. This is the no bullshit guide with the info you need. We’re not here to scare you or lay out every. single. potential. scenario – because why would we wanna be WebMD? Preggers Guide is bite-sized, straightforward and brutally honest.</p>
+				<p style="color: #95CEDF;">Now that there’s something growing inside of you, let’s talk about what you can do to feel your best while your insides shift around and before you start getting kicked so hard you wake up…</p>
 			</div>
-			<div id="sample">
-				<div class="grid-4" style="background-color: #95CEDF; height: 500px; padding: 2em;">
-					<h4 style="color: #7FB9CB; font-family: Bariol-Bold; font-size: .8em; letter-spacing: .5px; text-align: left; text-transform: uppercase; border-bottom: 2px solid #7FB9CB; width: 140px;">Chapter 1 Preview</h4>
-					<h1 style="font-size: 3em; color: #fff; text-align: left;">Holy Shit I’m Pregnant!</h1>
-				</div>
-				<div class="grid-8" style="font-family: Bariol-Serif-Regular; height: 500px; text-align: left; background-color: #F4F8FA; margin-left: 0; padding: 2em;">
-					<p style="color: #95CEDF;">Congratulations girl! Whatever your journey to pregnancy may have been, we’re glad you’re here now. After reading more baby and mama books than we can count, we were craving for something simple and straightforward, and with a healthy dose of humor – enter Preggers Guide. This is the no bullshit guide with the info you need. We’re not here to scare you or lay out every. single. potential. scenario – because why would we wanna be WebMD? Preggers Guide is bite-sized, straightforward and brutally honest.</p>
-					
-					<p style="color: #95CEDF;">Now that there’s something growing inside of you, let’s talk about what you can do to feel your best while your insides shift around and before you start getting kicked so hard you wake up…</p>
-				</div>
-			</div>
+		</div>
+	</div>
+	<div id="quotes" class="quotes">
+		<div class="quote">&nbsp;</div>
+		<div class="quote">&nbsp;</div>
+		<div class="quote">&nbsp;</div>
 	</div>
 	<!-- Footer -->
 	<div class="footer">
