Build the layout, needs finetuning

--- a/index.html
+++ b/index.html
@@ -44,19 +44,23 @@
 		</div>
 		<!-- Hero -->
 	</div>
-  	<div id="chapters">	
+  	<div class="chapters">	
   			<div class="head-subhead-centered">
   				<h2>We got you covered</h2>
   				<h3>Chapters from the moment you discover you’re preggers to the moment you heave that human out of your vag</h3>
-  			</div>  			
-			<table id="">
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
-			</table>
+  				<ul>
+  					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+  					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+  					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+  					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+  				</ul>
+  				<ul>
+					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+					<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+  				</ul>
+  			</div> 			
 	</div>
 	<div id="sample" class="sample-container">
 		<div class="sample-headline">
@@ -71,13 +75,29 @@
 		</div>
 	</div>
 	<div id="quotes" class="quotes">
-		<div class="quote">&nbsp;</div>
-		<div class="quote">&nbsp;</div>
-		<div class="quote">&nbsp;</div>
+		<div class="quote">
+			<h3>“Straight to the point. Much like labor.”</h3>
+		</div>
+		<div class="quote">
+			<h3>“The book I wish I had during pregnancy.”</h3>
+		</div>
+		<div class="quote">
+			<h3>“A gem for all the mommies to be.”</h3>
+		</div>
 	</div>
 	<!-- Footer -->
 	<div class="footer">
-		<p class="light">For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a> &mdash; <a href="legal.html">Legal Notice</a></p>
+		<div style="text-align: center;">
+			<ul>
+				<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+				<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+				<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
+			</ul>
+		</div>
+		<p>Preggers Guide is made by Cat Noone, Maddie Sheesley and Ashley Sullivan.<br><span class="light" style="color: #adb7c0;">It uses <a href="http://atipofoundry.com/fonts/bariol">Bariol and Bariol Serif</a>, <a href="http://entypo.com">Entypo Pictos</a> and a sprinkle of SVG graphics.<br>Made with <span class="entypo">&hearts;</span> all over the world by badass ladies. © h2016 All rights reserved.<br>For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a>.</span></p>
+		<div style="text-align: center; margin-top: .5em;">
+			<img src="images/cc_logos.svg" alt="Logos Paypal, Mastercard and Visa" />
+		</div>
 	</div>
 	<!-- /Footer -->	
 	<!-- Google Analytics -->
@@ -92,7 +112,6 @@
 	
 	</script>
 	<!-- /Google Analytics -->
-	
 	<!-- Java Script -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>		
 	<script type="text/javascript" src="jquery.easing.1.3.js"></script>
