Started coding the responsive styles

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 		</div>
 	</div>
 	<div id="quotes" class="quotes">
-		<div class="quote">
+		<div class="quote" style="background-image: url(images/maddie-site.jpg); repeat: no-repeat; background-position: center;">
 			<h3>“Straight to the point. Much like labor.”</h3>
 		</div>
-		<div class="quote">
+		<div class="quote" style="background-image: url(images/cat-site.jpg); repeat: no-repeat; background-position: center;">
 			<h3>“The book I wish I had during pregnancy.”</h3>
 		</div>
-		<div class="quote">
-			<h3>“A gem for all the mommies to be.”</h3>
+		<div class="quote" style="background-image: url(images/ashley-site.jpg); repeat: no-repeat; background-position: center;">
+			<h3><span>“A gem for all the mommies to be.”</span></h3>
 		</div>
 	</div>
 	<!-- Footer -->
@@ -94,7 +94,7 @@
 				<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
 			</ul>
 		</div>
-		<p>Preggers Guide is made by Cat Noone, Maddie Sheesley and Ashley Sullivan.<br><span class="light" style="color: #adb7c0;">It uses <a href="http://atipofoundry.com/fonts/bariol">Bariol and Bariol Serif</a>, <a href="http://entypo.com">Entypo Pictos</a> and a sprinkle of SVG graphics.<br>Made with <span class="entypo">&hearts;</span> all over the world by badass ladies. © h2016 All rights reserved.<br>For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a>.</span></p>
+		<p>Preggers Guide is made by Cat Noone, Maddie Sheesley and Ashley Sullivan. <span class="light" style="color: #adb7c0;">It uses <a href="http://atipofoundry.com/fonts/bariol">Bariol and Bariol Serif</a>, <a href="http://entypo.com">Entypo Pictos</a> and a sprinkle of SVG graphics. Made with <span class="entypo">&hearts;</span> all over the world by badass ladies. © h2016 All rights reserved. For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a>.</span></p>
 		<div style="text-align: center; margin-top: .5em;">
 			<img src="images/cc_logos.svg" alt="Logos Paypal, Mastercard and Visa" />
 		</div>
