Finished desktop design

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Hero -->
 		<div class="hero">
 			<div class="cover">
-				&nbsp;
+				<img src="images/hero-cover.svg" alt="" />
 			</div>
 			<div class="copy">
 				<h1>Pre-Order now!</h1>
@@ -64,25 +64,24 @@
 	</div>
 	<div id="sample" class="sample-container">
 		<div class="sample-headline">
-			<h4>Chapter 1 Preview</h4>
+			<h4><span>Chapter 1 Preview</span></h4>
 			<h1 style="font-size: 3em; color: #fff; text-align: left;">Holy Shit I’m Pregnant!</h1>
 		</div>
 		<div class="sample-copy">
 			<div class="sample-copy-container">
 				<p style="color: #95CEDF;">Congratulations girl! Whatever your journey to pregnancy may have been, we’re glad you’re here now. After reading more baby and mama books than we can count, we were craving for something simple and straightforward, and with a healthy dose of humor – enter Preggers Guide. This is the no bullshit guide with the info you need. We’re not here to scare you or lay out every. single. potential. scenario – because why would we wanna be WebMD? Preggers Guide is bite-sized, straightforward and brutally honest.</p>
-				<p style="color: #95CEDF;">Now that there’s something growing inside of you, let’s talk about what you can do to feel your best while your insides shift around and before you start getting kicked so hard you wake up…</p>
 			</div>
 		</div>
 	</div>
 	<div id="quotes" class="quotes">
 		<div class="quote" style="background-image: url(images/maddie-site.jpg); repeat: no-repeat; background-position: center;">
-			<h3>“Straight to the point. Much like labor.”</h3>
+			<h3><span>“Straight to the point. Much like labor.”</span></h3>
 		</div>
 		<div class="quote" style="background-image: url(images/cat-site.jpg); repeat: no-repeat; background-position: center;">
-			<h3>“The book I wish I had during pregnancy.”</h3>
+			<h3><span>“The book I wish I had during pregnancy.”</span></h3>
 		</div>
 		<div class="quote" style="background-image: url(images/ashley-site.jpg); repeat: no-repeat; background-position: center;">
-			<h3><span>“A gem for all the mommies to be.”</span></h3>
+			<h3><span>“A gem for all of the mommies-to-be.”</span></h3>
 		</div>
 	</div>
 	<!-- Footer -->
@@ -94,7 +93,9 @@
 				<li><a href=""><img class="about" src="images/ben_profile.jpg" alt="Photo Benedikt Lehnert" /></a></li>
 			</ul>
 		</div>
-		<p>Preggers Guide is made by Cat Noone, Maddie Sheesley and Ashley Sullivan. <span class="light" style="color: #adb7c0;">It uses <a href="http://atipofoundry.com/fonts/bariol">Bariol and Bariol Serif</a>, <a href="http://entypo.com">Entypo Pictos</a> and a sprinkle of SVG graphics. Made with <span class="entypo">&hearts;</span> all over the world by badass ladies. © h2016 All rights reserved. For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a>.</span></p>
+		<div class="footnote">
+			<p>Preggers Guide is made by Cat Noone, Maddie Sheesley and Ashley Sullivan. <span class="light" style="color: #adb7c0;">It uses <a href="http://atipofoundry.com/fonts/bariol">Bariol and Bariol Serif</a>, <a href="http://entypo.com">Entypo Pictos</a> and a sprinkle of SVG graphics. Made with <span class="entypo">&hearts;</span> all over the world by badass ladies. © h2016 All rights reserved. For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a>.</span></p>
+		</div>
 		<div style="text-align: center; margin-top: .5em;">
 			<img src="images/cc_logos.svg" alt="Logos Paypal, Mastercard and Visa" />
 		</div>
