--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 	<!-- /Google Analytics -->
 	<!-- Java Script -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.easing.1.3.js"></script>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	<!-- /Java Script -->
 
 </body>
