make second h1 an h2 and move styling to css

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div id="sample" class="sample-container">
 		<div class="sample-headline">
 			<h4><span>Chapter 1 Preview</span></h4>
-			<h1 style="font-size: 3em; color: #fff; text-align: left;">Holy Shit I’m Pregnant!</h1>
+			<h2>Holy Shit I’m Pregnant!</h2>
 		</div>
 		<div class="sample-copy">
 			<div class="sample-copy-container">
