Move p styling to CSS

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 		<div class="sample-copy">
 			<div class="sample-copy-container">
-				<p style="color: #95CEDF;">Congratulations girl! Whatever your journey to pregnancy may have been, we’re glad you’re here now. After reading more baby and mama books than we can count, we were craving for something simple and straightforward, and with a healthy dose of humor – enter Preggers Guide. This is the no bullshit guide with the info you need. We’re not here to scare you or lay out every. single. potential. scenario – because why would we wanna be WebMD? Preggers Guide is bite-sized, straightforward and brutally honest.</p>
+				<p>Congratulations girl! Whatever your journey to pregnancy may have been, we’re glad you’re here now. After reading more baby and mama books than we can count, we were craving for something simple and straightforward, and with a healthy dose of humor – enter Preggers Guide. This is the no bullshit guide with the info you need. We’re not here to scare you or lay out every. single. potential. scenario – because why would we wanna be WebMD? Preggers Guide is bite-sized, straightforward and brutally honest.</p>
 			</div>
 		</div>
 	</div>
