--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:url" content="http://www.preggersgui.de/" />
 	<meta property="og:description" content="" />
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style/stylesheets/base.css">
 
 	<link rel="shortcut icon" href="favicon.ico" >
 	<link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png" />
