--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div id="sample" class="sample-container">
 		<div class="sample-headline">
 			<h4><span>Chapter 1 Preview</span></h4>
-			<h2>Holy Shit I’m Pregnant!</h2>
+			<h2>Holy Shit<br>I’m Pregnant!</h2>
 		</div>
 		<div class="sample-copy">
 			<div class="sample-copy-container">
