--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 	</div>
 	<!-- TODO: FADE IN AND FADE OUT -->
 	<div id="quotes" class="quotes">
-		<div class="quote" style="background-image: url(assets/images/maddie-site.jpg); repeat: no-repeat; background-position: center;">
+		<div class="quote" style="background-image: url(assets/images/maddie-site.jpg);">
 			<h3><span>“Straight to the point. Much like labor.”</span></h3>
 		</div>
-		<div class="quote" style="background-image: url(assets/images/cat-site.jpg); repeat: no-repeat; background-position: center;">
+		<div class="quote" style="background-image: url(assets/images/cat-site.jpg);">
 			<h3><span>“The book I wish I had during pregnancy.”</span></h3>
 		</div>
-		<div class="quote" style="background-image: url(assets/images/ashley-site.jpg); repeat: no-repeat; background-position: center;">
+		<div class="quote" style="background-image: url(assets/images/ashley-site.jpg);">
 			<h3><span>“A gem for all of the mommies-to-be.”</span></h3>
 		</div>
 	</div>
