Restructure HTML for fade-in-fade-out

--- a/index.html
+++ b/index.html
@@ -75,14 +75,29 @@
 	</div>
 	<!-- TODO: FADE IN AND FADE OUT -->
 	<div id="quotes" class="quotes">
-		<div id="quote-1" class="quote" style="background-image: url(assets/images/maddie-site.jpg);">
-			<h3><span>“Straight to the point. Much like labor.”</span></h3>
+		<div id="quote-spot-1">
+      <div id="quote-1" class="quote active" style="background-image: url(assets/images/maddie-site.jpg);">
+        <h3><span>“Straight to the point. Much like labor.”</span></h3>
+      </div>
+      <div id="quote-4" class="quote" style="background-image: url(assets/images/cat-site.jpg);">
+        <h3><span>“The book I wish I had during pregnancy.”</span></h3>
+      </div>
 		</div>
-		<div id="quote-2" class="quote" style="background-image: url(assets/images/cat-site.jpg);">
-			<h3><span>“The book I wish I had during pregnancy.”</span></h3>
+		<div id="quote-spot-2">
+      <div id="quote-2" class="quote active" style="background-image: url(assets/images/cat-site.jpg);">
+        <h3><span>“The book I wish I had during pregnancy.”</span></h3>
+      </div>
+      <div id="quote-5" class="quote active" style="background-image: url(assets/images/ashley-site.jpg);">
+        <h3><span>“A gem for all of the mommies-to-be.”</span></h3>
+      </div>
 		</div>
-		<div id="quote-3" class="quote" style="background-image: url(assets/images/ashley-site.jpg);">
-			<h3><span>“A gem for all of the mommies-to-be.”</span></h3>
+		<div id="quote-spot-3">
+      <div id="quote-3" class="quote" style="background-image: url(assets/images/ashley-site.jpg);">
+        <h3><span>“A gem for all of the mommies-to-be.”</span></h3>
+      </div>
+      <div id="quote-6" class="quote" style="background-image: url(assets/images/maddie-site.jpg);">
+        <h3><span>“Straight to the point. Much like labor.”</span></h3>
+      </div>
 		</div>
 	</div>
 	<!-- Footer -->
