--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 	<link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png" />
 
 	<title>Preggersguide</title>
+
+  <!-- SCRIPT TO START FADE-IN-FADE-OUT -->
+  <script type="text/javascript">
+    jQuery(document).ready(function(){
+    	jQuery('#slideshow').fadeSlideShow();
+    });
+  </script>
 </head>
 <body>
 	<div class="header">
@@ -74,7 +81,27 @@
 		</div>
 	</div>
 	<!-- TODO: FADE IN AND FADE OUT -->
-	<div id="quotes" class="quotes">
+  <ul id="slideshow" class="carousel">
+    <li class="content" style="background-image: url(assets/images/maddie-site.jpg);">
+      <h3><span>"Straight to the point. Much like labor."</span></h3>
+    </li>
+    <li class="content" style="background-image: url(assets/images/cat-site.jpg);">
+      <h3><span>"Straight to the point. Much like labor."</span></h3>
+    </li>
+    <li class="content" style="background-image: url(assets/images/ashley-site.jpg);">
+      <h3><span>"Straight to the point. Much like labor."</span></h3>
+    </li>
+    <li class="content" style="background-image: url(assets/images/cat-site.jpg);">
+      <h3><span>"Straight to the point. Much like labor."</span></h3>
+    </li>
+    <li class="content" style="background-image: url(assets/images/ashley-site.jpg);">
+      <h3><span>"Straight to the point. Much like labor."</span></h3>
+    </li>
+    <li class="content" style="background-image: url(assets/images/maddie-site.jpg);">
+      <h3><span>"Straight to the point. Much like labor."</span></h3>
+    </li>
+  </ul>
+	<!-- <div id="quotes" class="quotes">
 		<div id="quote-spot-1">
       <div id="quote-1" class="quote active" style="background-image: url(assets/images/maddie-site.jpg);">
         <h3><span>“Straight to the point. Much like labor.”</span></h3>
@@ -87,19 +114,19 @@
       <div id="quote-2" class="quote active" style="background-image: url(assets/images/cat-site.jpg);">
         <h3><span>“The book I wish I had during pregnancy.”</span></h3>
       </div>
-      <div id="quote-5" class="quote active" style="background-image: url(assets/images/ashley-site.jpg);">
+      <div id="quote-5" class="quote" style="background-image: url(assets/images/ashley-site.jpg);">
         <h3><span>“A gem for all of the mommies-to-be.”</span></h3>
       </div>
 		</div>
 		<div id="quote-spot-3">
-      <div id="quote-3" class="quote" style="background-image: url(assets/images/ashley-site.jpg);">
+      <div id="quote-3" class="quote active" style="background-image: url(assets/images/ashley-site.jpg);">
         <h3><span>“A gem for all of the mommies-to-be.”</span></h3>
       </div>
       <div id="quote-6" class="quote" style="background-image: url(assets/images/maddie-site.jpg);">
         <h3><span>“Straight to the point. Much like labor.”</span></h3>
       </div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Footer -->
 	<div class="footer">
 		<div style="text-align: center;">
@@ -132,6 +159,7 @@
 	<!-- Java Script -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/fadeSlideShow.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- /Java Script -->
 
