Fix text copy pasta

--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
       <h3><span>"Straight to the point. Much like labor."</span></h3>
     </li>
     <li class="content" style="background-image: url(assets/images/cat-site.jpg);">
-      <h3><span>"Straight to the point. Much like labor."</span></h3>
+      <h3><span>"The book I wish I had during pregnancy."</span></h3>
     </li>
   </ul>
   <ul id="slideshow-2" class="carousel">
-    <li class="content" style="background-image: url(assets/images/ashley-site.jpg);">
-      <h3><span>"Straight to the point. Much like labor."</span></h3>
-    </li>
     <li class="content" style="background-image: url(assets/images/cat-site.jpg);">
-      <h3><span>"Straight to the point. Much like labor."</span></h3>
+      <h3><span>"The book I wish I had during pregnancy."</span></h3>
+    </li>
+    <li class="content" style="background-image: url(assets/images/ashley-site.jpg);">
+      <h3><span>"A gem for all of the mommies-to-be."</span></h3>
     </li>
   </ul>
   <ul id="slideshow-3" class="carousel">
     <li class="content" style="background-image: url(assets/images/ashley-site.jpg);">
-      <h3><span>"Straight to the point. Much like labor."</span></h3>
+      <h3><span>"A gem for all of the mommies-to-be.</span></h3>
     </li>
     <li class="content" style="background-image: url(assets/images/maddie-site.jpg);">
       <h3><span>"Straight to the point. Much like labor."</span></h3>
