Update file paths and add placeholder images

--- a/shop/index.html
+++ b/shop/index.html
@@ -17,8 +17,8 @@
   <meta property="og:url" content="http://www.typogui.de/shop" />
   <meta property="og:description" content="This little guide is for writers, designer, engineers, students or anyone who just wants to do things right. Mastering the daily typography adventures will help you get your message across more successfully." />
 
-  <link rel="stylesheet" href="../css/toast.css">
-  <link rel="stylesheet" href="../css/shop.css">
+  <link rel="stylesheet" href="../style/stylesheets/base.css">
+  <link rel="stylesheet" href="../style/stylesheets/shop.css">
   <link rel="shortcut icon" href="favicon.ico" >
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png" />
   <!-- Place GA code here-->
@@ -117,26 +117,26 @@
     <h6>Typoguide Posters<br><span class="green" style="font-size: 0.7em;font-weight: normal;font-family: KievitWebPro-Bold;">From $18 + Shipping</span></h6>
       <a href="http://www.society6.com/typoguide" class="purchase-posters-button">View &amp; Buy Posters</a>
       <ul>
-        <li><a href="http://society6.com/typoguide/Oh-Solo_Print#1=45"><img src="../images/poster1.jpg" width="200px" alt="" /></a></li>
-        <li><a href="http://society6.com/typoguide/Fonts-vs-Typefaces-Solo_Print#1=45"><img src="../images/poster2.jpg" width="200px" alt="" /></a></li>
-        <li><a href="http://society6.com/typoguide/Apostrophe-Solo_Print#1=45"><img src="../images/poster3.jpg" width="200px" alt="" /></a></li>
-        <li><a href="http://society6.com/typoguide/Line-Height--Font-Size-Solo_Print#1=45"><img src="../images/poster4.jpg" width="200px" alt="" /></a></li>
+        <li><a href="http://society6.com/typoguide/Oh-Solo_Print#1=45"><img src="../assets/images/poster1.jpg" width="200px" alt="" /></a></li>
+        <li><a href="http://society6.com/typoguide/Fonts-vs-Typefaces-Solo_Print#1=45"><img src="../assets/images/poster1.jpg" width="200px" alt="" /></a></li>
+        <li><a href="http://society6.com/typoguide/Apostrophe-Solo_Print#1=45"><img src="../assets/images/poster1.jpg" width="200px" alt="" /></a></li>
+        <li><a href="http://society6.com/typoguide/Line-Height--Font-Size-Solo_Print#1=45"><img src="../assets/images/poster1.jpg" width="200px" alt="" /></a></li>
       <ul>
   </div>
   <!-- Footer -->
   <div class="footer">
     <p class="light">For questions regarding your order, please <a href="mailto:orders@typogui.de">contact us</a> &mdash; <a href="legal.html">Legal Notice</a></p>
     <div style="text-align: center; margin-top: .5em;">
-      <img src="../images/cc_logos.svg" alt="Logos Paypal, Mastercard and Visa" />
+      <img src="../assets/images/cc_logos.svg" alt="Logos Paypal, Mastercard and Visa" />
     </div>
   </div>
   <!-- /Footer -->
   <div class="gallery">
     <ul>
-      <li><img src="../images/typoguide3.jpg"></li>
-      <li><img src="../images/typoguide1.jpg"></li>
-      <li><img src="../images/typoguide2.jpg"></li>
-      <li><img src="../images/typoguide4.jpg"></li>
+      <li><img src="../assets/images/typoguide3.jpg"></li>
+      <li><img src="../assets/images/typoguide3.jpg"></li>
+      <li><img src="../assets/images/typoguide3.jpg"></li>
+      <li><img src="../assets/images/typoguide3.jpg"></li>
     </ul>
   </div>
 
@@ -155,8 +155,8 @@
 
   <!-- Java Script -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script type="text/javascript" src="jquery.easing.1.3.js"></script>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="../js/jquery.easing.1.3.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
   <!-- /Java Script -->
 
 </body>
